--- a/css/style.css
+++ b/css/style.css
@@ -386,7 +386,8 @@ main {
   grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   grid-column-gap: 5rem;
   grid-row-gap: 5rem;
-  margin-top: 8rem; }
+  margin-top: 8rem;
+  margin-bottom: 8rem; }
   .project__item {
     background-color: #fff;
     box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
@@ -427,7 +428,67 @@ main {
     flex-direction: column;
     padding: 2rem 3rem;
     align-items: center; }
+  .project__img-special {
+    width: 50%;
+    background-size: cover;
+    border-top: 1px solid #1d1d1d; }
+  .project__links-special {
+    display: inline-block;
+    color: #2a5298;
+    font-size: 5rem;
+    margin: 0 1rem;
+    padding: 0 2rem;
+    transition: 0.3s;
+    border-radius: 4px; }
+    .project__links-special:hover {
+      background-color: #dddddd;
+      transform: translateY(-3px); }
+  .project__row-special {
+    position: absolute;
+    top: 1rem;
+    right: 1rem; }
+  .project__special-container {
+    width: 50%;
+    background-image: linear-gradient(to bottom, rgba(29, 49, 134, 0.7), rgba(58, 78, 167, 0.7));
+    clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
+    display: flex;
+    flex-direction: column;
+    padding: 3rem 8rem;
+    align-items: center;
+    justify-content: space-evenly; }
+  .project__text-special {
+    color: #fff;
+    font-size: 1.5rem;
+    letter-spacing: 3px; }
+  .project__name-special {
+    font-size: 3.5rem;
+    letter-spacing: 1rem;
+    font-weight: 400;
+    color: #fff;
+    align-self: flex-start; }
+  .project__repo {
+    position: absolute;
+    top: 4rem;
+    left: 8rem;
+    font-size: 1.5rem;
+    font-weight: 300;
+    color: #fff; }
+  .project__item-special {
+    position: relative;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    display: flex;
+    background-image: url(../img/atsin-main.jpg);
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    height: 45rem;
+    box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2); }
 
-.special {
-  grid-column-start: 1;
-  grid-column-end: 4; }
+.star-adjust {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  font-size: 5rem;
+  color: #fff;
+  z-index: 100; }
