--- a/scss/layout/projects.scss
+++ b/scss/layout/projects.scss
@@ -6,6 +6,7 @@
 
   grid-row-gap: 5rem;
   margin-top: 8rem;
+  margin-bottom: 8rem;
 
   &__item {
     background-color: $white;
@@ -64,9 +65,99 @@
     padding: 2rem 3rem;
     align-items: center;
   }
+
+  &__img-special {
+    width: 50%;
+
+    background-size: cover;
+    border-top: 1px solid $grey-dark;
+  }
+
+  &__info-container-special {
+  }
+
+  &__text-special {
+  }
+
+  &__links-special {
+    display: inline-block;
+    color: $med-blue;
+    font-size: 5rem;
+    margin: 0 1rem;
+    padding: 0 2rem;
+    transition: 0.3s;
+    border-radius: 4px;
+
+    &:hover {
+      background-color: rgb(221, 221, 221);
+      transform: translateY(-3px);
+    }
+  }
+
+  &__row-special {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+  }
+  &__special-container {
+    width: 50%;
+
+    background-image: linear-gradient(
+      to bottom,
+      rgba(29, 49, 134, 0.7),
+      rgba(58, 78, 167, 0.7)
+    );
+
+    clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
+    display: flex;
+    flex-direction: column;
+    padding: 3rem 8rem;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  &__text-special {
+    color: $white;
+    font-size: 1.5rem;
+    letter-spacing: 3px;
+  }
+
+  &__name-special {
+    font-size: 3.5rem;
+    letter-spacing: 1rem;
+    font-weight: 400;
+    color: $white;
+    align-self: flex-start;
+  }
+
+  &__repo {
+    position: absolute;
+    top: 4rem;
+    left: 8rem;
+    font-size: 1.5rem;
+    font-weight: 300;
+    color: $white;
+  }
+
+  &__item-special {
+    position: relative;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    display: flex;
+    background-image: url(../img/atsin-main.jpg);
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    height: 45rem;
+    box-shadow: 0 1rem 1rem rgba(black, 0.2);
+  }
 }
 
-.special {
-  grid-column-start: 1;
-  grid-column-end: 4;
+.star-adjust {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  font-size: 5rem;
+  color: $white;
+  z-index: 100;
 }
