--- a/scss/layout/header.scss
+++ b/scss/layout/header.scss
@@ -42,9 +42,17 @@
 }
 
 .header {
-  min-height: 55rem;
+  height: 100vh;
   width: 100vw;
-  background-image: linear-gradient(to right, $med-blue, $dark-blue);
+  background-image: linear-gradient(
+      to right,
+      rgba(29, 49, 134, 0.7),
+      rgba(58, 78, 167, 0.7)
+    ),
+    url(../img/city.jpg);
+  background-size: cover;
+  object-fit: cover;
+  background-position: center;
 
   padding: 2rem 10rem;
   position: relative;
@@ -66,13 +74,17 @@
   }
 
   &__title-main {
-    color: $white;
-    font-size: 4rem;
+    color: rgba(255, 255, 255, 0.774);
+    font-size: 12rem;
     letter-spacing: 4px;
-    font-weight: 400;
+    font-weight: 900;
     animation: moveInLeft;
     animation-duration: 2s;
     margin-bottom: 3rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   &__anchor {
