--- a/scss/layout/projects.scss
+++ b/scss/layout/projects.scss
@@ -162,3 +162,12 @@
   color: $white;
   z-index: 100;
 }
+
+.projects-title {
+  text-align: center;
+  font-size: 5rem;
+  letter-spacing: 1px;
+  font-weight: 300;
+  color: $grey-dark;
+  margin-top: 8rem;
+}
