--- a/scss/base/base.scss
+++ b/scss/base/base.scss
@@ -17,6 +17,7 @@ body {
   box-sizing: border-box;
   line-height: 1.7;
   background-color: rgb(228, 228, 228);
+  position: relative;
 }
 
 main {
