--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
   position: relative; }
 
 main {
-  transition: 0.5s; }
+  transition: 0.3s; }
 
 @keyframes moveInLeft {
   0% {
@@ -302,7 +302,16 @@ main {
     width: 50%; }
   .intro__column-2 {
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    background-color: #fff;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
+    transform: scale(1.1);
+    padding: 3rem;
+    transition: 0.2s; }
+    .intro__column-2:hover {
+      transform: scale(1.15);
+      box-shadow: 0 2rem 2rem rgba(0, 0, 0, 0.3); }
   .intro__developer {
     font-size: 3rem;
     color: #333333;
