--- a/scss/layout/intro.scss
+++ b/scss/layout/intro.scss
@@ -62,6 +62,17 @@
   &__column-2 {
     display: flex;
     flex-direction: column;
+    background-color: $white;
+    box-shadow: 0 1rem 2rem rgba(black, 0.3);
+    border-radius: 8px;
+    transform: scale(1.1);
+    padding: 3rem;
+    transition: 0.2s;
+
+    &:hover {
+      transform: scale(1.15);
+      box-shadow: 0 2rem 2rem rgba(black, 0.3);
+    }
   }
 
   &__developer {
