--- a/scss/layout/contact.scss
+++ b/scss/layout/contact.scss
@@ -6,7 +6,6 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  opacity: 0;
 
   &__text {
     color: $white;
@@ -26,12 +25,32 @@
     transform: translateX(-50%);
     border-radius: 4px;
     z-index: 2;
+
+    @media only screen and (max-width: 41.5em) {
+      width: 45rem;
+      height: min-content;
+    }
+
+    @media only screen and (max-width: 35.9em) {
+      width: 90%;
+    }
+
+    @media only screen and (max-width: 33.6em) {
+      padding: 5rem 2rem;
+      margin-top: 80rem;
+      margin-bottom: 5rem;
+    }
   }
 
   &__info-container {
     width: 60%;
     float: right;
     height: 100%;
+
+    @media only screen and (max-width: 33.6em) {
+      float: left;
+      width: 100%;
+    }
   }
 
   &__form {
@@ -52,6 +71,10 @@
     border: 1px solid transparent;
     transition: 0.3s;
     resize: none;
+
+    @media only screen and (max-width: 33.6em) {
+      margin: 0.5rem 0;
+    }
   }
 
   &__inputs:focus {
@@ -76,6 +99,10 @@
     transition: 0.2s;
     border: none;
     border-radius: 2px;
+
+    @media only screen and (max-width: 41.5em) {
+      margin-top: 1rem;
+    }
   }
 
   &__btn:hover {
@@ -98,6 +125,24 @@
   border-radius: 4px;
   box-shadow: 0 1rem 1rem rgba(black, 0.2);
   padding: 2rem 3rem;
+
+  @media only screen and (max-width: 41.5em) {
+    left: -13rem;
+  }
+
+  @media only screen and (max-width: 35.9em) {
+    top: 50%;
+    left: 1.2rem;
+    width: 35%;
+  }
+
+  @media only screen and (max-width: 33.6em) {
+    width: 90%;
+    top: -35%;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 20rem;
+  }
 
   &__title {
     font-size: 1.8rem;
@@ -134,6 +179,17 @@
 
   &__social-container {
     margin-top: 5rem;
+
+    @media only screen and (max-width: 33.6em) {
+      margin-top: 0;
+
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      right: 2rem;
+      top: 50%;
+      transform: translateY(-50%);
+    }
   }
 }
 
@@ -144,4 +200,12 @@
 
   display: block;
   width: 100%;
+
+  @media only screen and (max-width: 37.5em) {
+    margin-top: 60rem;
+  }
+
+  @media only screen and (max-width: 34.1em) {
+    display: none;
+  }
 }
