--- a/scss/layout/intro.scss
+++ b/scss/layout/intro.scss
@@ -2,7 +2,7 @@
   margin-top: 10rem;
   display: flex;
   flex-direction: column;
-  opacity: 0;
+
   align-items: center;
   justify-content: center;
   margin-bottom: 10rem;
@@ -50,13 +50,23 @@
     display: flex;
     justify-content: space-around;
     margin-bottom: 15rem;
-    opacity: 0;
+
+    @media only screen and (max-width: 46.8em) {
+      flex-direction: column;
+      padding: 3rem;
+    }
   }
 
   &__column {
     display: flex;
     flex-direction: column;
     width: 50%;
+
+    @media only screen and (max-width: 46.8em) {
+      width: 100%;
+      align-items: center;
+      margin-bottom: 8rem;
+    }
   }
 
   &__initials {
@@ -88,6 +98,10 @@
     padding: 3rem;
     transition: 0.2s;
 
+    @media only screen and (max-width: 46.8em) {
+      margin: 3rem;
+    }
+
     &:hover {
       transform: scale(1.15);
       box-shadow: 0 2rem 2rem rgba(black, 0.3);
@@ -100,6 +114,12 @@
     font-weight: 400;
     letter-spacing: 1px;
     margin-bottom: 1rem;
+
+    @media only screen and (max-width: 46.8em) {
+      width: 80%;
+      font-size: 4rem;
+      margin-bottom: 2rem;
+    }
   }
 
   &__personal {
@@ -144,6 +164,10 @@
     font-size: 2rem;
     margin-left: 2rem;
     font-weight: 300;
+
+    @media only screen and (max-width: 24.2em) {
+      font-size: 1.7rem;
+    }
   }
 
   &__resume-btn:hover {
@@ -165,6 +189,10 @@
     margin-top: 0.5rem;
     transition: 0.3s;
     position: relative;
+
+    @media only screen and (max-width: 46.8em) {
+      align-self: flex-start;
+    }
   }
 
   &__resume-btn:hover::after {
@@ -176,6 +204,11 @@
     font-size: 1.5rem;
     color: #6d6c6c;
     line-height: 1.7;
+
+    @media only screen and (max-width: 46.8em) {
+      width: 80%;
+      font-size: 2rem;
+    }
   }
 }
 
@@ -205,7 +238,6 @@
   grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
   grid-gap: 5rem;
   padding: 10rem;
-  opacity: 0;
 }
 
 .skill-title {
@@ -214,5 +246,4 @@
   letter-spacing: 1px;
   font-weight: 300;
   color: $grey-dark;
-  opacity: 0;
 }
