--- a/scss/layout/projects.scss
+++ b/scss/layout/projects.scss
@@ -1,12 +1,16 @@
 .project {
   display: grid;
   padding: 0 8rem;
-  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
   grid-column-gap: 5rem;
 
   grid-row-gap: 5rem;
   margin-top: 8rem;
   margin-bottom: 8rem;
+
+  @media only screen and (max-width: 31.25em) {
+    padding: 0 3rem;
+  }
 
   &__item {
     background-color: $white;
@@ -47,6 +51,10 @@
     background-size: cover;
 
     width: 100%;
+
+    @media only screen and (max-width: 35.25em) {
+      height: 30rem;
+    }
   }
 
   &__name {
@@ -65,6 +73,10 @@
     flex-direction: column;
     padding: 2rem 3rem;
     align-items: center;
+
+    @media only screen and (max-width: 35.25em) {
+      padding: 4rem;
+    }
   }
 
   &__img-special {
@@ -82,6 +94,14 @@
     padding: 0 2rem;
     transition: 0.3s;
     border-radius: 4px;
+
+    @media only screen and (max-width: 44.5em) {
+      margin: 0;
+    }
+
+    @media only screen and (max-width: 26.5em) {
+      font-size: 3.8rem;
+    }
 
     &:hover {
       background-color: rgb(221, 221, 221);
@@ -109,6 +129,15 @@
     padding: 3rem 8rem;
     align-items: center;
     justify-content: space-evenly;
+
+    @media only screen and (max-width: 44.5em) {
+      width: 75%;
+    }
+
+    @media only screen and (max-width: 30.25em) {
+      padding: 1rem 3rem;
+      justify-content: center;
+    }
   }
 
   &__text-special {
@@ -136,8 +165,7 @@
 
   &__item-special {
     position: relative;
-    grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column: 1 / -1;
     display: flex;
     background-image: url(../img/atsin-main.jpg);
     background-size: cover;
@@ -164,8 +192,4 @@
   font-weight: 300;
   color: $grey-dark;
   margin-top: 8rem;
-}
-
-.section-in {
-  opacity: 0;
 }
