--- a/css/style.css
+++ b/css/style.css
@@ -652,6 +652,9 @@ main {
   position: absolute;
   bottom: 0;
   left: 0; }
+  @media only screen and (max-width: 33.43em) {
+    .contact {
+      z-index: -1; } }
   .contact__text {
     color: #fff;
     margin-bottom: 3rem;
