--- a/css/style.css
+++ b/css/style.css
@@ -800,3 +800,23 @@ main {
   @media only screen and (max-width: 34.1em) {
     .svg {
       display: none; } }
+
+.success {
+  text-align: center;
+  font-size: 2.2rem;
+  letter-spacing: 1px;
+  color: #1d1d1d;
+  font-weight: 300;
+  margin-bottom: 1.5rem; }
+
+.text {
+  text-align: center;
+  font-size: 1.5rem;
+  color: #777;
+  margin-bottom: 2rem; }
+
+.anchor {
+  font-size: 1.8rem;
+  color: #2a5298;
+  display: table;
+  margin: 0 auto; }
